# aap

./: .gitignore  .gitmodules  DESIGN.md  README.md  pyproject.toml
aap/: __init__.py  main.py
aap/agents/: gaia_agent.py
aap/hooks/: log_hook.py
aap/teams/: browser_agent.py  deepresearch.py  mcp_config.py  omnipotent.py  prompts.py  trading_system_visualization.py
aap/teams/agents/: trading_multi_agent_pydantic.py
aap/tools/: __init__.py
aap/tools/browser/: __init__.py  prompts.py  service.py  views.py
aap/tools/document/: __init__.py  service.py  views.py
aap/tools/image/: __init__.py  service.py  views.py
aap/tools/search/: __init__.py  service.py  views.py
aap/tools/think/: __init__.py  service.py  views.py
aap/tools/video/: __init__.py  service.py  views.py
docs/: multi_agent_trade_system_design.md  trading_system_comparison.md
tests/: test_pydantic_system.py  test_tools.py
