[project]
name = "aap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.58.2",
    "aworld==0.2.6",
    "browser-use==0.5.5",
    "click>=8.2.1",
    "colorama>=0.4.6",
    "fastmcp>=2.10.6",
    "filetype>=1.2.0",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "matplotlib>=3.10.5",
    "mcp>=1.10.1",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "openai>=1.66.5",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "structlog>=25.4.0",
    "toml>=0.10.2",
    "typer>=0.16.0",
    "types-requests>=2.32.4.20250611",
    "typing-extensions>=4.14.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.2.0",
    "pytest-mock>=3.11.0",
    "pytest-asyncio>=0.21.0",

    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",

    "pre-commit>=3.5.0",
    "ruff>=0.12.2"
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true


[tool.ruff]
target-version = "py313"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PL", # pylint
    "RUF", # ruff
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
]
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["aap"]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]
